# Sorosub

./: README.md
Documents/Glassbox/: BINARY_SIZE_TRACKING.md  Cargo.toml  INCREMENTAL_REFRESH.md  README.md  WATCH_MODE.md  size-thresholds.json
Documents/Glassbox/.github/workflows/: size-check.yml
Documents/Glassbox/scripts/: check-binary-sizes.sh  measure-baseline-sizes.sh  test-size-tracking.sh
Documents/Glassbox/src/: lib.rs  refresh.rs  state.rs  trace.rs  viewer.rs  watch.rs
Documents/playground/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  package.json
Documents/playground/database/: schema.sql
Documents/playground/frontend/components/: SessionList.css  SessionList.jsx
Documents/playground/frontend/pages/: ProfileSettings.css  ProfileSettings.jsx
Documents/playground/src/: index.js
Documents/playground/src/config/: database.js
Documents/playground/src/middleware/: auth.js
Documents/sorosub/: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  CODE_OF_CONDUCT.md  COMMUNITY_DOCUMENTS_SUMMARY.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  INDEX.md  LAUNCH_CHECKLIST.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_SUMMARY.md  SECURITY.md  TESTING.md  WAVE_PROGRAM_PLAN.md
Documents/sorosub/contracts/sorosub/: Cargo.toml
Documents/sorosub/contracts/sorosub/src/: lib.rs  test.rs
Documents/sorosub/contracts/sorosub/test_snapshots/test/tests/: test_cancel_subscription.1.json  test_get_metadata.1.json  test_subscribe_and_query.1.json  test_subscription_not_found.1.json
(+3 files in other folders)
