[package]
name = "glassbox"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
soroban-sdk = "21.0.0"
soroban-env-host = "21.0.0"
stellar-xdr = "21.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"

[lib]
name = "glassbox"
path = "src/lib.rs"

[[bin]]
name = "glassbox-cli"
path = "src/bin/cli.rs"
